# Samarium

./: .gitignore  .todo  404.html  CHANGELOG.md  LICENSE  README.md  TODO.md  index.html  justfile  mkdocs.yml  pyproject.toml  samarium.md  setup.py  versions.json
.github/workflows/: ci.yml  codecov.yml  pytest.yml
0.5.3/: 404.html  index.html
0.5.3/arrays/: index.html
0.5.3/builtins/: index.html
0.5.3/classes/: index.html
0.5.3/comments/: index.html
0.5.3/controlflow/: index.html
0.5.3/enums/: index.html
0.5.3/examples/: index.html
0.5.3/fileio/: index.html
0.5.3/functions/: index.html
0.5.3/interop/: index.html
0.5.3/modules/: index.html
0.5.3/null/: index.html
0.5.3/numbers/: index.html
0.5.3/operators/: index.html
0.5.3/search/: search_index.json
0.5.3/slices/: index.html
0.5.3/stdcollections/: index.html
0.5.3/stddatetime/: index.html
0.5.3/stdio/: index.html
0.5.3/stditer/: index.html
0.5.3/stdmath/: index.html
0.5.3/stdoperator/: index.html
0.5.3/stdrandom/: index.html
0.5.3/stdstring/: index.html
0.5.3/stdtypes/: index.html
0.5.3/strings/: index.html
0.5.3/tables/: index.html
0.5.3/tools/: index.html
0.5.3/variables/: index.html
0.5.3/zip/: index.html
0.6.0/: 404.html  index.html
0.6.0/arrays/: index.html
0.6.0/builtins/: index.html
0.6.0/classes/: index.html
0.6.0/comments/: index.html
0.6.0/controlflow/: index.html
0.6.0/enums/: index.html
0.6.0/examples/: index.html
0.6.0/fileio/: index.html
0.6.0/functions/: index.html
0.6.0/interop/: index.html
0.6.0/modules/: index.html
0.6.2/: index.html
arrays/: index.html
builtins/: index.html
classes/: index.html
comments/: index.html
controlflow/: index.html
docs/: 00variables.md  01integers.md  02operators.md  03strings.md  04arrays.md  04comments.md  05arrays.md  05tables.md  06slices.md  07comments.md  07enums.md  08builtins.md  08tables.md  09builtins.md  09controlflow.md  10controlflow.md  10functions.md  11functions.md  11modules.md  12classes.md  12modules.md  13classes.md  13fileio.md  14fileio.md  14stdcollections.md  15stdcollections.md  15stditer.md  16stddatetime.md  16stdmath.md  17stditer.md  17stdrandom.md  18stdmath.md  18stdstring.md  19stdoperator.md  19stdtypes.md  20stdrandom.md  21stdstring.md  22stdterminal.md  23stdtypes.md  arrays.md  (+32 more)
enums/: index.html
examples/: fizzbuzz.sm  helloworld.sm  index.html  prime.sm  truthmachine.sm
fileio/: index.html
functions/: index.html
interop/: index.html
modules/: index.html
null/: index.html
numbers/: index.html
operators/: index.html
samarium/: __init__.py  builtins.py  core.py  python.py  repl.py  tokenizer.py  transpiler.py  utils.py
search/: search_index.json
slices/: index.html
src/: __main__.py  compiler.py  core.py  exceptions.py  handlers.py  interpreter.py  objects.py  parser.py  runner.py  tokenizer.py  tokens.py  transpiler.py  utils.py
stdcollections/: index.html
stddatetime/: index.html
stdio/: index.html
stditer/: index.html
stdmath/: index.html
stdoperator/: index.html
stdrandom/: index.html
stdstring/: index.html
stdtypes/: index.html
strings/: index.html
tables/: index.html
tests/: __init__.py  hello_world.sm  samarium.py  test_basics.py  utils.py
tools/: index.html
variables/: index.html
zip/: index.html
(+90 files in other folders)
