[tool.poetry]
name = "samarium"
version = "0.6.0"
description = "The Samarium Programming Language"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
documentation = "https://samarium-lang.github.io/Samarium/"
repository = "https://github.com/samarium-lang/Samarium"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dahlia = "^2.3.1"
crossandra = "^2.0.0"
configzen = "^0.5.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0"
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"

[tool.ruff]
target-version = "py39"
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "E",
    "ERA",
    "F",
    "FBT",
    "I",
    "ISC",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "A002",
    "A003",
    "ANN101",
    "ANN102",
    "ANN401",
    "RUF001",
    "RUF002",
    "RUF003",
    "TRY003",
    "C90"
]

[tool.poetry.scripts]
samarium = "samarium.__main__:main"
samarium-debug = "samarium.__init__:main_debug"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

