[tool.poetry]
name = "samarium"
version = "0.6.0"
description = "The Samarium Programming Language"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
documentation = "https://samarium-lang.github.io/Samarium/"
repository = "https://github.com/samarium-lang/Samarium"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dahlia = "^3.0.0"
crossandra = "^2.2.1"
configzen = "^0.5.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"
mypy = "^1.10.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "DTZ", "FIX", "S", "SLF", "ANN1", "ANN401", "C90", "ISC001", "T201", "TD003", "PLR2004", "PLR091", "PERF203", "PYI034"]

[tool.ruff.lint.pylint]
max-returns = 8

[tool.mypy]
disable_error_code = "attr-defined, override"

[tool.poetry.scripts]
samarium = "samarium.__main__:main"
samarium-debug = "samarium.__init__:main_debug"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

