[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "samarium"
version = "0.6.2"
description = "The Samarium Programming Language"
readme = "README.md"
authors = [{ name = "trag1c", email = "dev@jakubr.me" }]
requires-python = ">=3.9"
dependencies = [
    "dahlia ~=3.0",
    "crossandra >=2.2.1,<3.0.0",
]

[project.scripts]
samarium = "samarium.__main__:main"
samarium-debug = "samarium.__init__:main_debug"

[project.urls]
documentation = "https://samarium-lang.github.io/Samarium/"
repository = "https://github.com/samarium-lang/Samarium"

[dependency-groups]
dev = [
    "ruff ~=0.4.8",
    "mkdocs >=1.5.1,<2.0.0",
    "mkdocs-material >=9.1.21,<10.0.0",
    "mypy ~=1.10",
    "mike >=2.1.1,<3.0.0",
]

[tool.mypy]
disable_error_code = "attr-defined, override"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "DTZ", "FIX", "S", "SLF", "ANN1", "ANN401", "C90", "ISC001", "T201", "TD003", "PLR2004", "PLR091", "PERF203", "PYI034"]

[tool.ruff.lint.pylint]
max-returns = 8
